# chromehead

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
extensions/chrome/: BUILD.bazel  package.json  tsconfig.json  webpack.config.js
extensions/chrome/public/: manifest.json
extensions/chrome/src/: chromehead.ts
extensions/chrome/src/contextmenus/links/: id.ts  simc.ts  types.ts  wowhead-markup.ts
extensions/firefox/: BUILD.bazel  package.json  tsconfig.json  webpack.config.build.js  webpack.config.js
extensions/firefox/public/: manifest.json
extensions/firefox/src/: firehead.ts
extensions/firefox/src/contextmenus/: item-linking.ts
extensions/firefox/src/contextmenus/links/: id.ts  simc.ts  types.ts  wowhead-markup.ts
tools/: index.bzl  terser.bzl  terser_config.json  typescript.bzl
